# orate

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
orate_api/: build.rs
orate_api/api/: orate.yaml
orate_server/: Cargo.toml
orate_server/src/: api_context.rs  api_error.rs  main.rs
orate_server/src/handlers/: hello_handler.rs
