[package]
name = "orate_server"
version = "0.1.0"
edition = "2024"

# Define the binary target and specify the desired output name
[[bin]]
name = "orate"
path = "src/main.rs"

[dependencies]
orate_api = { path = "../orate_api" }
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
axum-extra = "0.10.1"
http = "1.3.1"
thiserror = "2.0.12"
